add location permission

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     //
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    //
+    compile 'com.yanzhenjie:permission:1.1.2'
 }
