--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     //图片选择库
     compile 'com.jph.takephoto:takephoto_library:3.0.2'
     //https://github.com/wdullaer/MaterialDateTimePicker//日期时间选择器
-    compile 'com.wdullaer:materialdatetimepicker:3.0.0'
+//    compile 'com.wdullaer:materialdatetimepicker:3.0.0'
     //Glide 图片加载库
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:26.0.0'
@@ -101,4 +101,5 @@ dependencies {
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     //
     compile 'com.yanzhenjie:permission:1.1.2'
+    compile 'co.infinum:materialdatetimepicker-support:3.5.1'
 }
